updating newsfeed and adding privacy policy for Steam (for steam store iframe used on faq page), and adding missing link to jkhub privacy policy

--- a/legal.html
+++ b/legal.html
@@ -46,7 +46,7 @@
         <div class="centerdiv">
             <h1>Terms of Use <br>&<br> Privacy Policy</h1>
     
-            <h3 title="MM/DD/YYYY">Last Update: 05/20/2024</h3>
+            <h3 title="MM/DD/YYYY">Last Update: 01/09/2026</h3>
         </div>
 
         <main>
@@ -201,15 +201,15 @@
                             use here</a> and
                         their <a href="https://help.github.com/en/articles/github-privacy-statement"> privacy policy
                             here</a>.</li>
-                    <li>JKHub Forum's are also integrated into the site, you can view their <a href="">terms of use here</a>
-                        and
-                        their <a href="">privacy policy here</a>.</li>
+                    <li>JKHub's Forum is also integrated into the site, you can view 
+                        their <a href="https://jkhub.org/privacy-policy/" title="JKHub.org's privacy policy.">privacy policy here</a>.</li>
                     <li>Images on the site are often hosted through imgur.com, be aware of their <a
                             href="https://imgur.com/tos">
                             terms of service</a> and their <a href="https://imgur.com/privacy">privacy policy</a>.</li>
+                    <li>An iFrame integration to Valve's Steam Store is integrated into our site, you can view their <a href="https://store.steampowered.com/legal/" title="Steam's legal policy.">legal</a> and <a href="https://store.steampowered.com/privacy_agreement/" title="Steam privacy policy, including information about how they track data via cookies can be found here.">privacy policy here</a>.</li>
                     <li>Youtube videos may also be integrated into the site from time to time. Be aware of their <a
-                            href="https://www.youtube.com/t/terms">terms of use</a>
-                        and <a href="https://policies.google.com/privacy">privacy policy</a>. Keep in mind they
+                            href="https://www.youtube.com/t/terms" title="Youtube terms of use.">terms of use</a>
+                        and <a href="https://policies.google.com/privacy" title="Youtube privacy policy.">privacy policy</a>. Keep in mind they
                         are the most likely to try to track your activities and use advertisements out of any service
                         we use on the site. We recommend using an adblocker if their tracking attempts bother you.</li>
                 </ul>
